# aiogram-template

./: .gitignore  LICENSE  README.md  config.toml.example  main.py  pyproject.toml
src/handlers/: __init__.py  registration.py
src/keyboards/: first_keyboard.py
src/utils/: states.py
