[tool.poetry]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aiogram_template"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
